--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
   <table cellspacing="20">
     <tr>
-      <td><img src="picture/dan-cropped.png" alt="Me"></td>
+      <td><img src="picture/dan1.png" alt="Me"></td>
       <td>
         <h1>Dan Gaute Eng</h1>
         <p><em>Founder of <strong><a href="https://www.njordr.net">Njörd</a></strong>.</em></p>
